--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,7 @@ body {
   background-color: #f0f0f0;
 }
 * {
-  /* font-family: "Lexend Deca", sans-serif; */
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Andika", sans-serif;
   font-optical-sizing: auto;
   font-weight: 250;
   font-style: normal;
@@ -19,10 +18,14 @@ code {
   padding: 10px;
   border-radius: 5px;
   background-image: linear-gradient(rgb(36, 72, 162), white);
+  opacity: 0.9;
   border: 2px solid rgb(52, 51, 51);
 }
 .custom-forecast {
   border-radius: 0px;
+}
+.custom-forecast > * {
+  font-size: 1.2rem;
 }
 .custom-result:hover {
   cursor: pointer;
@@ -36,26 +39,39 @@ code {
   text-decoration: underline;
   cursor: pointer;
   color: blue;
+  
 }
 .custom-delete-btn {
   width: fit-content;
   font-size: 0.8rem;
   border-radius: 5px;
 }
-.custom-search-btn {
+.custom-search-btn, button {
  background-color: rgb(36, 72, 162);
  color: white;
  border-radius: 5px;
  width: 15%;
 }
+
 .custom-search-btn:hover {
   background-color: white;
   color: rgb(36, 72, 162);
 }
 
-@media screen and (max-width: 992px) {
-  p {
-    font-size: 0.8rem;
+@media screen and (max-width: 768px) {
+  .custom-forecast > * {
+    font-size: 1rem;
   }
+}
+@media screen and (max-width: 576px) {
   
+  .custom-city-container, .custom-search  {
+    width: 100%;
+  }
+  .custom-search-btn {
+    width: 30%;
+  }
+  .custom-forecast > * {
+    font-size: 0.7rem;
+  }
 }
